# ChangeLog for lxde-base/lxsession
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxsession/ChangeLog,v 1.44 2013/10/17 08:19:58 nullishzero Exp $

  17 Oct 2013;  <paul@gentoo.org> +files/lxsession-0.4.9.2-makefile.patch,
  lxsession-0.4.9.2.ebuild:
  Add patch for bug #488082; patch thanks to Jacob Godserv.

  08 Oct 2013; Markos Chandras <hwoarang@gentoo.org> lxsession-0.4.9.2.ebuild:
  Add missing dev-libs/libgee:0 dependency thanks to Viktor Yu. Kovalskiy. Bug
  #487312

*lxsession-0.4.9.2 (07 Oct 2013)

  07 Oct 2013; Markos Chandras <hwoarang@gentoo.org> +lxsession-0.4.9.2.ebuild:
  Version bump

  23 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> lxsession-0.4.6.1.ebuild,
  metadata.xml:
  Rename USE="udev" to USE="dbus upower" separating restart/shutdown vs.
  hibernate/suspend into their own flags wrt #438478 by Dominique Michel

  23 Feb 2013; Zac Medico <zmedico@gentoo.org> lxsession-0.4.6.1.ebuild:
  Add ~arm-linux and ~x86-linux keywords.

  25 Aug 2012; Markos Chandras <hwoarang@gentoo.org> -lxsession-0.4.4.ebuild,
  -lxsession-0.4.5.ebuild:
  Remove old LXDE packages

  05 Jun 2012; Michael Weber <xmw@gentoo.org> lxsession-0.4.6.1.ebuild:
  ppc stable (bug 385189)

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> lxsession-0.4.4.ebuild,
  lxsession-0.4.5.ebuild, lxsession-0.4.6.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  09 Oct 2011; Markus Meier <maekke@gentoo.org> lxsession-0.4.6.1.ebuild:
  arm stable, bug #385189

  07 Oct 2011; Markos Chandras <hwoarang@gentoo.org> lxsession-0.4.6.1.ebuild:
  Stable on amd64 wrt bug #385189

  05 Oct 2011; Andreas Schuerch <nativemad@gentoo.org>
  lxsession-0.4.6.1.ebuild:
  x86 stable, bug 385189

*lxsession-0.4.6.1 (28 Jul 2011)

  28 Jul 2011; Markos Chandras <hwoarang@gentoo.org>
  -lxsession-0.4.6-r1.ebuild, +lxsession-0.4.6.1.ebuild,
  -files/lxsession-0.4.6-fix-segfault.patch: