@@ -5,23 +5,23 @@ AUX lxsession-0.4.9.2-makefile.patch 358 SHA256 d274ca5ce995e5849c2d9a21a2c3b7eb
 DIST lxsession-0.4.6.1.tar.gz 407100 SHA256 bd6a7ef3c0ba4b9eedf3c58624dbce8bbbba3b179abbc552bf10c2830eec3ee1 SHA512 eea554ba70b3fd278b7ce0bb2d278241dff26eaccf74f2a4a0a9846515688fd5dd846c97f29c71139a0c3b95bc5e906efc4673f0cd79d8db427894dff5524f16 WHIRLPOOL 235d6c2e8a622a4460d767d5b6af22710f17060fffea18ac5cedaeb4dc9f70dc77872d486caa9d7256c379f160755ac7b8299e7836fd513675b65d1c979b900a
 DIST lxsession-0.4.9.2.tar.gz 745637 SHA256 eff03e573b561cabe81c5d015d825e3d998e98d6621040113d7df471c8b9cfb4 SHA512 cffcd15faab79ad165f969edf65b6b106c5b4405b78e6c102a74ab96da9cf61b781d0be7587849ce56672ae3015e8f63bc1b84465f5ec0084c299ec588992172 WHIRLPOOL 5a5c172cda30a4690d82a4a8acd3b983cbcc60ed71fefdfbfbb97e8b4363f4c26825267a0bd45c71589c2dd180f9699a2d05dd759fe23bcfdd5e9d3a10ccdda2
 EBUILD lxsession-0.4.6.1.ebuild 1032 SHA256 f4b370644992af47a61562c1fc0007f7d0e543a3b3f32f23916a63aa90bb6cca SHA512 4fef19b4509d19fd4d40331a34ae374ea1c56f9d0f69f665334b60ec060e9855006408dafaabf908a916afb1457bbc88f174f380d32dfe8283105842819ee9a1 WHIRLPOOL 95fdc47d78bf0f3341003add98fcd9811c594523fa4278685dceb01b7411eafcd02c4eed46cfea7ed5593ae5c3f35eea64fd88872771b27a156a510249543190
-EBUILD lxsession-0.4.9.2.ebuild 1200 SHA256 3c9b89583953f3f95aa90322afede140f5242145f3d3605b1fd4e979837bdb4d SHA512 727b972d55d3cd9c80594861cae7e5042ca0d610af2bda836803aeea9f04adff829d9c889106e277f6ab9c78e7499054602195d967eb876246e96bf9af836a66 WHIRLPOOL 5c43adf4eddb7e37fbdd10f8e2b5634bf4fe5c0aab3481816d25843a87f200a47d8b9a1dda74b95a9f641d9e1c74e1230bdadd7f0527a3482a8805c6e20c059e
-MISC ChangeLog 6336 SHA256 3c2b4b704d387c57f94fb8354396d4f317a22bd0dd496b3786ce5062ae4edf70 SHA512 83e065e458bf87b918f6e10bb1994f590c04d8d14237ebb9313dcb0c7b98505b48f8cdf62e3185f83350c2d8747dd5b3621c7b7043d2357ce7e959eb26a965ab WHIRLPOOL aa73848c2c7c2543b5cb0ea3e287c3f7a490648d7155af2fb3c154db1cbe4cfb9957e79d0a513f256b7884908a399c7f1fb63ed404290a46fe86d1a4e7203c3e
+EBUILD lxsession-0.4.9.2.ebuild 1207 SHA256 2697b363fa15e95f0eaa9195a2370f9e29e19cda3413f9bec21f7c16a7d6792e SHA512 e44d66141490fbdf91083251962b2c4e5639171407fa2388e96c4b3b68da90ad1db168be3e7bdfd25dec1ec5524caa61f9b58074b769fac26b383a892f153791 WHIRLPOOL 6ce5c3cd2359aa8029ef153799cf42000cfde0b2151475351869875ecb31d6b77088c6e55a70bf01250de48785d5b19e484c2f978e8b9580948c40c926a98054
+MISC ChangeLog 6418 SHA256 96ca3e445b14eaeb4828248fd971f1a8036fbb74471c13101e450d36651f2521 SHA512 f67e9974d6334055c817c178eaf7bc000b14460903e21f817ea1bb6decfdda4bbbf3888dff8da22ddd457120ee71c8bb95f7b67b8c5b6dbf507ee6f724045d4b WHIRLPOOL 73953f1017e451624a39a5cfcddc02d07b040fef02090396b153f54b7bb50772c0f0d04a94cfcc1e4e0bebb321356a2498c11fb7c2c4ba207a9613cf87475394
 MISC metadata.xml 273 SHA256 81ec974708665ad78687d951d92cc04365d3cc14e29f7bffe7b44a7feae00b0e SHA512 377b077e8df5d96050c07d631ad60535b28a307e40554ff8772e2baf1ac509caadb0a843f33a16ed98b677d547526b2045ee8b8d36ba1324f1b2d8c8be87d382 WHIRLPOOL a93a8996b05319db10902fa49ec30fa605c73e8e93bd6fe02ede29b3b08fa4786d9034729475935fa6b826486c72a7b3504a21255a1b68d2467fc45ab51f8c2c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSX52yAAoJENb1ecI556suZpAP/2TcK/2Hi3qyiIfp3J9IonB8
-jUeBX/dX8Yz6ynQ/lqKBYeDEAEkCSz9YQVTxHQZBjIHlAmSeZgvIwngWP4UbSCPO
-/NPowHrgoiai1jPHpS/UYFZStLPadnGf13WV81EoyaEek/OcgpbwmKPPqa8pgPUQ
-XCiyy0+xs8tN19mCUhPCLtBSvYcUfP/ab4nwdQIX+lgPATmNBXg4LMtOX5VgVFXF
-B/k+/P8yWhgyK+GyoTVmQikNvU7b+UQ2cbpcVp8aCX1NMLAQPo/B7Dh+lDTj5a18
-pS/lml+NRAIvKEI6c/Wbr0krpg7huw/FBst0CubkVRpceZRpO5tnU5M4J7ebkvHY
-Eg4XblskjSnqwJpY5bXth9jkN9zth4xN5zR+YYWij+CJ85cV1iFlsBnbsOGR9amY
-2iBl8oSpph1gRsa4gZibOakvkhAP7tZ2AGpdPZCsEmy70g0oTHajZUap1Lb9GMCn
-+tMV3St8AnfQy/XscZhNj4BQWqx9O+jtqNiw0BP1D0wzGOWALBc2OPtyaLijeGi/
-pWbPG4s2n5xZbRff2w7xl1AruwaLVwfKJcqfUHaOtKUeB2VpY/CvyBsK23toMO7i
-wFefh4ZztXq8WTmZaOC+UV/0WW3xzqq7ga6AgjYr1gkUcFqZacVDZM4AnICIRzbX
-GZrUB9Qs4sPc7AwFlxyy
-=C3Lj
+iQIcBAEBCAAGBQJSX6EhAAoJENb1ecI556suGjIQAKrKTVN0i3FRckWWy4bkNByu
+SSFJWbTHCKNjR8Rff8BjVpdyH/csAnumIMb6Q82BMxXaojpStwjfeySi2CeBh4Dn
+VBktU9AknfGBH72W0qeajhnVRRH3nOTJs6IcR0P8VIYtGfHmRwb7A1RRCxb/5KfM
+rSCv0t4w4OOD0Y5E6ZjJEUKLKothBuIifrvNy2KlnwV3whEk8w7WICQ1mEGRqoqL
+ss7CJQAzjhLkaV776vYi7hYVY24VrakSgnsD2AcYlJXNl6GyCAD9Y4iEdLLEQ+hY
+8RgF8skoo11mT+b7waj2ZqyKTMcU8tLT3+60uNTZo9UbLymDOwLE0txWGWPaIgrQ
+1pbgAum+3rsbg4uHFjjqoj230DpNk74C6ciF9anoOv6C7zk6r6W7LeYyzfRCAn6h
+kNpat4fm2eu3GqhmzZJF8h+Iwn75iXx7U7rrminBhO+PL4puTE5VWpgIsBgVh97Q
+3CDEKcH97jEQ7vq1/tADK6PeH7vwXtohth8hneCJnVADVAQIRyOAoKZdgEAOv0X5
+S0cYVkLkzjPdRmP3KdBAf5AsWC1iZTnCei0lQYCb+2sKkn9yJ8ML6M93XDIdZwzT
+uuvYhezLVWcwWnDPsEBWAgl3/KbmuPkZw1ciuSl91EtaHBSiObNBI5G4FZloICHn
+ZGVi9XrqNIAPihpIOKTC
+=nxZM
 -----END PGP SIGNATURE-----
