@@ -1,13 +1,13 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxsession/lxsession-0.4.9.2.ebuild,v 1.3 2013/10/17 08:19:58 nullishzero Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxsession/lxsession-0.4.9.2.ebuild,v 1.4 2013/10/17 08:34:32 nullishzero Exp $
 
 EAPI=5
 
 VALA_MIN_API_VERSION="0.14"
 VALA_MAX_API_VERSION="0.20"
 
-inherit vala autotools
+inherit vala autotools eutils
 
 DESCRIPTION="LXDE session manager (lite version)"
 HOMEPAGE="http://lxde.sf.net/"
