@@ -10,4 +10,4 @@ RDEPEND=dev-libs/glib:2 dev-libs/libgee:0 lxde-base/lxde-common x11-libs/gtk+:2 
 SLOT=0
 SRC_URI=mirror://sourceforge/lxde/lxsession-0.4.9.2.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	vala	b365480bc54c4e356dc1e953da9fe356
-_md5_=2ecce3f96413ebc0bc65ea3c05fcfe4a
+_md5_=782e7af331ac169ddfe48c8148bc346a
