@@ -1,6 +1,9 @@
 # ChangeLog for lxde-base/lxsession
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxsession/ChangeLog,v 1.44 2013/10/17 08:19:58 nullishzero Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxsession/ChangeLog,v 1.45 2013/10/17 08:34:32 nullishzero Exp $
+
+  17 Oct 2013;  <paul@gentoo.org> lxsession-0.4.9.2.ebuild:
+  Add inherit eutils
 
   17 Oct 2013;  <paul@gentoo.org> +files/lxsession-0.4.9.2-makefile.patch,
   lxsession-0.4.9.2.ebuild:
